* BUGFIX: Userinfo in URLs with unknown schema, incl. http://, is retained for http basic authentication and is not used for KSI authentication.
* IMPROVEMENT: Moved signature helper functions from signature.{h,c} into signature_helper.{h,c}
* FEATURE: Added signature builder.
* IMPROVEMENT: All functions except *List_new and *List_free are now type safe macros.
* IMPROVEMENT: Deprecated functions KSI_TLV_setUintValue, KSI_TLV_fromUint and KSI_TLV_removeNestedTlv.

Version 3.9

2016-06-21 release(3.9.1696)
* IMPROVEMENT: Added block signature sample application.
* IMPROVEMENT: Removed dead code from http_parser.{c,h}
* IMPROVEMENT: Added KSI_verifyDataHash.
* IMPROVEMENT: Custom meta-data sepparated from the low-level implementation. Adds padding automatically.
* IMPROVEMENT: Metadata hardening verification.

Version 3.8

2016-04-18 release(3.8.1428)

* IMPROVEMENT: Removed SHA-224 support.
* IMPROVEMENT: Removed Unused function KSI_RDR_verifyEnd.
* IMPROVEMENT: PKI truststore initialization is performed on the need basis.
* IMPROVEMENT: Added signature verification according to policies.
* IMPROVEMENT: Created KSI_HmacHasher interface for incremental HMAC computation.
* IMPROVEMENT: Certificate constraints can be set and verified per publications file.
* IMPROVEMENT: Add preprocessor parseable version no.
* IMPROVEMENT: KSI_receivePublicationsFile must not verify publications file automatically.
* BUGFIX: Invalid and misleading exception message on response publication time check.
* BUGFIX: Correcting memory leaks when using Windows Crypt32 library.

Version 3.8

* IMPROVEMENT: Added support for local aggregation.
* IMPROVEMENT: Functions KSI_Signature_create* are deprecated and KSI_Signature_sign will replace them.
* IMPROVEMENT: Added function KSI_Signature_appendAggregationChain.
* IMPROVEMENT: Added function KSI_AggregationHashChain_calculateShape.